# foundry-duck-transforms

./: .gitignore  README.md  pyproject.toml  release_new.sh
.github/workflows/: test-and-publish.yml
examples/lineage_example_project/: README.md  generate_inputs.py  setup.py
examples/lineage_example_project/lineage_example/: __init__.py  pipeline.py  transforms_01_users_clean.py  transforms_02_orders_clean.py  transforms_03_events_agg.py  transforms_04_user_order_join.py  transforms_05_metrics_by_user.py  transforms_06_country_rollup.py  transforms_07_join_rollup_back.py  transforms_08_final_facts.py  transforms_a.py  transforms_b.py
libs/foundry_runner/: pyproject.toml
libs/foundry_runner/foundry_runner/: manage.py
libs/transforms/: pyproject.toml
libs/transforms/transforms/api/: __init__.py  transform_df.py
transforms/: data_manager.py  expectations.py  generate_types.py  manage.py  models.py  run.py  runner.py  schema.prisma  types.py
transforms/api/: __init__.py  check.py  configure.py  pipeline.py  transform_df.py
transforms/api/tests/: test_transform_df.py
transforms/config/: __init__.py  settings.py
transforms/config/tests/: test_settings.py
transforms/engine/: duckdb.py  lineage.py  spark.py  spark_sail.py
transforms/engine/tests/: test_duckdb_format_save_patch.py  test_duckdb_path_patch.py
transforms/expectations/: __init__.py  all.py  colexpects.py  conditional_expectations.py  count_expectations.py  dataset_ref.py  grouped.py  operators.py  property_expectations.py
transforms/expectations/tests/: test_expectations.py
transforms/lineage/: __init__.py  collector.py  patch_pyspark_imports.py  schema_only_source.py  server.py  sink.py
transforms/migrations/: env.py
transforms/prisma_client/: actions.py  bases.py  client.py  metadata.py  models.py  schema.prisma  types.py
transforms/runner/: dataset_logging.py  default_executor.py  exec_check.py  exec_transform.py  execution_plan.py  progress.py
transforms/runner/data_sink/: base.py  local_ducklake.py  local_file_sink.py  local_file_sink_with_duck.py
transforms/runner/data_source/: base.py  download_result.py  foundry_source.py  foundry_source_with_duck.py  local_ducklake_source.py  local_file_source.py  mixed_source.py
transforms/runner/tests/: conftest.py  test_concurrent_downloads.py  test_exec_transform.py  test_execution_plan.py  test_foundry_e2e.py  test_foundry_source_settings.py  test_lineage_mode.py  test_lineage_server_api.py  test_pipeline_discovery_for_lineage.py  test_progress.py
transforms/tests/: test_dataset_collection.py  test_manager.py  test_mocks.py  test_transform.py
transforms/typeddf/: dataset.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/lineage/: graphUtils.ts  types.ts
ui/src/lineage/components/: ColumnContextMenu.tsx  DatasetNode.tsx  HeaderBar.tsx  LineageGraphCanvas.tsx  LineageSidebar.tsx  ModeTabs.tsx
