[project]

name = "foundry-duck-transforms"
readme = "README.md"
description = "Run transforms quickly on local machine and analyse using DuckDb and pyspark"
requires-python = ">=3.10"
authors = [{ name = "Emil Redzik", email = "kontakt@eredzik.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "duckdb",
    'sqlframe',
    'pyspark',
    'pandas',
    'typer',
    'pyarrow',
    'foundry-dev-tools',
    'asyncer',
]
version = "0.1.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['transforms']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=transforms"
testpaths = ["transforms/runner/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: tests that hit real Palantir Foundry and require credentials",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "pyspark.*",
    "asyncer.*",
    "duckdb.*",
    "sqlframe.*",
    "foundry_dev_tools.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[dependency-groups]
dev = [
    "pyspark>=3.0.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-spark>=0.6.0",
    "python-dotenv>=1.0.0",
    "build>=1.2.2.post1",
    "twine>=5.1.1",
]
